# QuickHull

./: .gitmodules  CMakeLists.txt
src/: geometry.h  quickhull.h
